charts/magnum-opus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magnum-opus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: magnumapi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magnum-opus
                port:
                  number: 80
